--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Muistipeli</h1>
+    <button id="restart-btn">Aloita uudelleen</button>
     <div id="game-board"></div>
     <script type="module" src="./js/game.js"></script>
 </body>
