--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <h1>Muistipeli</h1>
-    <button id="restart-btn">Aloita uudelleen</button>
+    <label for="card-select">Valitse korttein määrä:</label>
+    <select id="card-select">
+        <option value="8">8</option>
+        <option value="12">12</option>
+        <option value="16" selected>16</option>
+        <option value="20">20</option>
+    </select>
+    <button id="restart-btn">Uusi peli</button>
     <div id="game-board"></div>
     <script type="module" src="./js/game.js"></script>
 </body>
