pelin lopetus, modal

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div id="win-modal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <h2>Onnea!</h2>
+            <p id="win-message"></p>
+            <button id="close-modal-btn">Sulje</button>
+        </div>
+    </div>
     <h1>Muistipeli</h1>
     <label for="card-select">Valitse korttein määrä:</label>
     <select id="card-select">
