--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
     </div>
     <h1>Muistipeli</h1>
+    <h3 id="timer"></h3>
     <label for="card-select">Valitse korttein määrä:</label>
     <select id="card-select">
         <option value="8">8</option>
